template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "disks_Server1_OsDisk_1_32fed11a70954047b3a08c5cfec48891_name": {
            "defaultValue": "Server1_OsDisk_1_32fed11a70954047b3a08c5cfec48891",
            "type": "String"
        },
        "virtualMachines_Server1_name": {
            "defaultValue": "Server1",
            "type": "String"
        },
        "networkInterfaces_server1937_name": {
            "defaultValue": "server1937",
            "type": "String"
        },
        "networkSecurityGroups_Server1_nsg_name": {
            "defaultValue": "Server1-nsg",
            "type": "String"
        },
        "publicIPAddresses_Server1_ip_name": {
            "defaultValue": "Server1-ip",
            "type": "String"
        },
        "virtualNetworks_ResourceGroup1_vnet_name": {
            "defaultValue": "ResourceGroup1-vnet",
            "type": "String"
        },
        "storageAccounts_resourcegroup1diag513_name": {
            "defaultValue": "resourcegroup1diag513",
            "type": "String"
        },
        "securityRules_default_allow_rdp_name": {
            "defaultValue": "Server1-nsg/default-allow-rdp",
            "type": "String"
        },
        "subnets_default_name": {
            "defaultValue": "ResourceGroup1-vnet/default",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/c0ee273b-7350-434a-9bd4-b31f0dcf365f/resourceGroups/ResourceGroup1/providers/Microsoft.Compute/disks/Server1_OsDisk_1_32fed11a70954047b3a08c5cfec48891'.",
            "type": "Microsoft.Compute/disks",
            "name": "[parameters('disks_Server1_OsDisk_1_32fed11a70954047b3a08c5cfec48891_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "uksouth",
            "scale": null,
            "properties": {
                "accountType": "Premium_LRS",
                "osType": "Windows",
                "creationData": {
                    "createOption": "FromImage",
                    "imageReference": {
                        "id": "/Subscriptions/c0ee273b-7350-434a-9bd4-b31f0dcf365f/Providers/Microsoft.Compute/Locations/uksouth/Publishers/MicrosoftWindowsServer/ArtifactTypes/VMImage/Offers/WindowsServer/Skus/2012-R2-Datacenter/Versions/latest"
                    }
                },
                "diskSizeGB": 128
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c0ee273b-7350-434a-9bd4-b31f0dcf365f/resourceGroups/ResourceGroup1/providers/Microsoft.Compute/virtualMachines/Server1'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_Server1_name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "uksouth",
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS1_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2012-R2-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[concat(parameters('virtualMachines_Server1_name'),'_OsDisk_1_32fed11a70954047b3a08c5cfec48891')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS",
                            "id": "[resourceId('Microsoft.Compute/disks', parameters('disks_Server1_OsDisk_1_32fed11a70954047b3a08c5cfec48891_name'))]"
                        },
                        "diskSizeGB": 128
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_Server1_name')]",
                    "adminUsername": "mark",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_server1937_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https', '://', parameters('storageAccounts_resourcegroup1diag513_name'), '.blob.core.windows.net', '/')]"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/disks', parameters('disks_Server1_OsDisk_1_32fed11a70954047b3a08c5cfec48891_name'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_server1937_name'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_resourcegroup1diag513_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c0ee273b-7350-434a-9bd4-b31f0dcf365f/resourceGroups/ResourceGroup1/providers/Microsoft.Network/networkInterfaces/server1937'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_server1937_name')]",
            "apiVersion": "2017-06-01",
            "location": "uksouth",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "7728877b-dca9-4b7b-8e9c-91373228b96e",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"3bfda3dd-ab12-484a-86f9-3f1315258d99\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.0.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_Server1_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "rnaid0d1gp2erh2qn1d0nx0x3d.zx.internal.cloudapp.net"
                },
                "macAddress": "00-22-48-01-90-4E",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Server1_nsg_name'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_Server1_name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_Server1_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Server1_nsg_name'))]",
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_Server1_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c0ee273b-7350-434a-9bd4-b31f0dcf365f/resourceGroups/ResourceGroup1/providers/Microsoft.Network/networkSecurityGroups/Server1-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_Server1_nsg_name')]",
            "apiVersion": "2017-06-01",
            "location": "uksouth",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "396dc441-5469-44d7-83db-4138541d0ada",
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "etag": "W/\"839b120d-11e2-42b6-942a-430b7f1d1f4f\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"839b120d-11e2-42b6-942a-430b7f1d1f4f\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"839b120d-11e2-42b6-942a-430b7f1d1f4f\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"839b120d-11e2-42b6-942a-430b7f1d1f4f\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"839b120d-11e2-42b6-942a-430b7f1d1f4f\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"839b120d-11e2-42b6-942a-430b7f1d1f4f\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"839b120d-11e2-42b6-942a-430b7f1d1f4f\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c0ee273b-7350-434a-9bd4-b31f0dcf365f/resourceGroups/ResourceGroup1/providers/Microsoft.Network/publicIPAddresses/Server1-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('publicIPAddresses_Server1_ip_name')]",
            "apiVersion": "2017-06-01",
            "location": "uksouth",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "f19bb1b4-c417-4743-ac5d-0d2560f65831",
                "ipAddress": "51.140.118.210",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c0ee273b-7350-434a-9bd4-b31f0dcf365f/resourceGroups/ResourceGroup1/providers/Microsoft.Network/virtualNetworks/ResourceGroup1-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_ResourceGroup1_vnet_name')]",
            "apiVersion": "2017-06-01",
            "location": "uksouth",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "e881408b-337b-48f8-9f90-6ec7a6df57eb",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "etag": "W/\"f9a72ba7-ee4c-4a15-b412-e1be4888868f\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.0.0.0/24"
                        }
                    }
                ],
                "virtualNetworkPeerings": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c0ee273b-7350-434a-9bd4-b31f0dcf365f/resourceGroups/resourcegroup1/providers/Microsoft.Storage/storageAccounts/resourcegroup1diag513'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_resourcegroup1diag513_name')]",
            "apiVersion": "2016-01-01",
            "location": "uksouth",
            "tags": {},
            "scale": null,
            "properties": {},
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c0ee273b-7350-434a-9bd4-b31f0dcf365f/resourceGroups/ResourceGroup1/providers/Microsoft.Network/networkSecurityGroups/Server1-nsg/securityRules/default-allow-rdp'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[parameters('securityRules_default_allow_rdp_name')]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Server1_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/c0ee273b-7350-434a-9bd4-b31f0dcf365f/resourceGroups/ResourceGroup1/providers/Microsoft.Network/virtualNetworks/ResourceGroup1-vnet/subnets/default'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[parameters('subnets_default_name')]",
            "apiVersion": "2017-06-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.0.0/24"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_ResourceGroup1_vnet_name'))]"
            ]
        }
    ]
}
